added scorecard name to station

--- a/home/templates/format.html
+++ b/home/templates/format.html
@@ -22,8 +22,10 @@
             <div class="col-12 col-sm-5 col-lg-4">
               <nav class="nav flex-column align-items-center justify-content-center">
                 {% for station in stations %}
+                {% if station.display %}
                 {% if not forloop.counter|divisibleby:"2" %}
                 <a class="nav-link pb-0" href="#{{ station.name|cut:" " }}">{{ station.name }}</a>
+                {% endif %}
                 {% endif %}
                 {% endfor %}
               </nav>
@@ -31,8 +33,10 @@
             <div class="col-12 col-sm-5 col-lg-4">
               <nav class="nav flex-column align-items-center justify-content-center">
                 {% for station in stations %}
+                {% if station.display %}
                 {% if forloop.counter|divisibleby:"2" %}
                 <a class="nav-link pb-0" href="#{{ station.name|cut:" " }}">{{ station.name }}</a>
+                {% endif %}
                 {% endif %}
                 {% endfor %}
               </nav>
@@ -83,6 +87,7 @@
 
           <!-- stations -->
           {% for station in stations %}
+          {% if station.display %}
           <div class="mt-5">
             <span id="{{ station.name|cut:" " }}" class="anchor"></span>
             {% if station.image %}
@@ -105,6 +110,7 @@
               </span>
             </div>
           </div>
+          {% endif %}
           {% endfor %}
 
           <!-- field layouts -->
