--- a/home/templates/format.html
+++ b/home/templates/format.html
@@ -44,6 +44,7 @@
             </div>
           </div>
 
+          <h3 class="mt-3">Field Layouts</h3>
           <div class="row align-items-center justify-content-center mb-2">
               <div class="col-12 col-sm-5 col-lg-5">
                 <nav class="nav flex-column align-items-center justify-content-center text-center">
@@ -114,7 +115,6 @@
 
           <!-- field layouts -->
           {% for field_layout in field_layouts %}
-          <p>field layouts</p>
           <div class="mt-5">
               <span id="{{ field_layout.name|cut:" " }}" class="anchor"></span>
               {% if field_layout.image %}
