changed animation title to station name

--- a/home/templates/format.html
+++ b/home/templates/format.html
@@ -108,7 +108,7 @@
                 </a>
                 {% endif %}
                 {% if station.animation %}
-                  <button class="btn btn-primary btn-sm btn-animation" data-animation-file-name="{{ station.scorecard_name }}" data-animation-title="{{ station.scorecard_name }}" data-file-location="{{ station.animation.url }}">See animation <i class="fa fa-play-circle-o"></i>
+                  <button class="btn btn-primary btn-sm btn-animation" data-animation-file-name="{{ station.scorecard_name }}" data-animation-title="{{ station.name }}" data-file-location="{{ station.animation.url }}">See animation <i class="fa fa-play-circle-o"></i>
                   </button>
                 {% endif %}
               </span>
