--- a/home/templates/format.html
+++ b/home/templates/format.html
@@ -125,13 +125,14 @@
                 <img src="{{ field_layout.image.url }}" class="img-fluid key-feature-image" alt="{{ station.name }}" />
               {% endif %}
               <div class="row mt-3 justify-content-between">
-                <a href="#top">
-                  <i class="fa fa-long-arrow-up"></i> Go to top</a>
+                <a href="#top"><i class="fa fa-long-arrow-up"></i> Go to top</a>
+                {% if field_layout.diagram %}
                 <span>
-                  <a href="{{ field_layout.diagram }}" target="_blank" class="btn btn-primary btn-sm">Print
+                  <a href="{{ field_layout.diagram.url }}" target="_blank" class="btn btn-primary btn-sm">Print
                     <i class="fa fa-print"></i>
                   </a>
                 </span>
+                {% endif %}
               </div>
           </div>
           {% endfor %}
