--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -1,34 +1,32 @@
 {% extends "base.html" %}
 
-{% load wagtailcore_tags %}
+{% load wagtailcore_tags wagtailembeds_tags wagtailimages_tags %}
 
 {% block body_class %}template-homepage{% endblock %}
 {% load static %}
-{% block headscript %}
-        <!-- Charts libraries -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.18/c3.min.css">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.9/c3.min.js"></script>
-{% endblock headscript %}
 
 {% block content %}
-    <!--HEADER/TITLE OF THE HOME PAGE-->
-    <header class="container-fluid" id="title-header">
-      <div class="row mt-5 align-items-center justify-content-center ">
-        <div class="col-lg-3 col-7 mt-5 mt-lg-0 px-0 px-lg-1 text-center">
-          <img src={% static "img/logo_large.png" %} id="header-logo" alt="SportTech IQ Logo" class="img-fluid">
-        </div>
-        <div class="col-lg-5 col-sm-12">
-          <div class="py-5 py-sm-4 text-center">
-            <h1>{{ page.header }}</h1>
-            <p>{{ page.header_description }}</p>
-            </p>
+  <header class="container-fluid" id="title-header">
+      <div class="row mt-5 pt-5 pb-4 align-items-center justify-content-center ">
+        <div class="col col-md-8 col-lg-4 text-center justify-content-center">
+          <h1>{{ page.heading }}</h1>
+          <div class="embed-responsive embed-responsive-16by9 mb-4">
+            {% embed page.video %}
           </div>
         </div>
-        <div class="col-lg-3 col-sm-12 pb-sm-5 pb-4 pb-lg-4 pt-lg-5 text-center" id="title-image-column">
-          <img src={% static "img/tc_back.png" %} id="header-card" class="info-full">
+        <div class="col-lg-8 d-flex flex-column flex-md-row pb-sm-4 pb-4 pb-lg-1 justify-content-center align-items-center cards-container">
+          {% image page.image_1 original as image_1 %}
+          <span><img src="{{ image_1.url }}" class="header-card my-2 my-md-0 mx-md-3 img-responsive"></span>
+          {% image page.image_2 original as image_2 %}
+          <span><img src="{{ image_2.url }}" class="header-card my-2 my-md-0 mx-md-3 img-responsive"></span>
+          <span style="position:relative;display:inline-block">
+              {% image page.image_3 original as image_3 %}
+              <span><img src="{{ image_3.url }}" class="header-card my-2 my-md-0 mx-md-3 img-fluid info-full"></span>
+            <a href="#" class="info-i-button" data-original-title="" title=""></a>
+          </span>
         </div>
       </div>
+
     </header>
 
     {% for block in page.body %}
@@ -36,78 +34,6 @@
             {% include_block block %}
           </section>
     {% endfor %}
-
-    <span id="stats" class="anchor"></span>
-    <section class="container pt-2">
-      <h2 class="display-4 py-3">Stats</h2>
-      <div class="row align-items-center justify-content-center">
-        <div class="col-12 col-lg-5 order-12 order-lg-1 text-center">
-          <img src={% static "img/tc_back.png" %} class="key-feature-image info-full">
-        </div>
-        <div class="col-12 col-lg-5 py-2 order-1 order-lg-12 text-center">
-          <h3 class="display-5">Your own Trading Card!</h3>
-          <h5 class="text-center">Learn & improve your Skill IQ's.</h5>
-          <h5 class="text-center"> Share with Coaches & Friends!</h5>
-          <p class="text-center">
-            <span class="fa fa-twitter  blue-icon"></span>
-            <span class="fa fa-facebook-official blue-icon"></span>
-          </p>
-        </div>
-      </div>
-    </section>
-
-
-    <section class="container pt-4">
-      <div class="row align-items-center justify-content-center">
-        <div class="col-12 col-lg-5 text-center">
-          <h3 class="display-5 mt-4 mt-lg-0">Track & Improve! </h3>
-          <div id="chart-demo-1" class="iq-chart info-full"></div>
-          Date:
-          <span class="dropdown">
-            <button class="btn btn-primary btn-xs dropdown-toggle" type="button" id="time-compare-dropdown" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false">
-              Latest
-              <span class="caret"></span>
-            </button>
-            <div class="dropdown-menu dropdown-menu-xs" aria-labelledby="time-compare-dropdown">
-              <a class="dropdown-item" href="#">Latest</a>
-              <a class="dropdown-item disabled" href="#" data-value="1/13/18">1/13/18</a>
-              <a class="dropdown-item disabled" href="#" data-value="7/15/17">7/15/17</a>
-              <a class="dropdown-item disabled" href="#" data-value="2/20/17">2/20/17</a>
-            </div>
-          </span>
-        </div>
-        <div class="col-12 col-lg-5 py-2 text-center">
-          <h3 class="display-5 mt-4 mt-lg-0">Compare Scores!</h3>
-          <div id="chart-demo-2" class="iq-chart info-full"></div>
-          Comparison:
-          <span class="dropdown">
-            <button class="btn btn-primary btn-xs dropdown-toggle" type="button" id="competitor-age-dropdown" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Any birth year
-              <span class="caret"></span>
-            </button>
-            <div class="dropdown-menu dropdown-menu-xs" aria-labelledby="competitor-age-dropdown">
-              <a class="dropdown-item" href="#" data-value="all">Any birth year</a>
-              <a class="dropdown-item disabled" href="#" data-value="2012">Birth year 2012</a>
-              <a class="dropdown-item disabled" href="#" data-value="2011">Birth year 2011</a>
-            </div>
-          </span>
-          <span class="dropdown">
-            <button class="btn btn-primary btn-xs dropdown-toggle" type="button" id="competitor-gender-dropdown" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Male
-              <span class="caret"></span>
-            </button>
-            <div class="dropdown-menu dropdown-menu-xs" aria-labelledby="competitor-gender-dropdown">
-              <a class="dropdown-item" href="#" data-value="M">Male</a>
-              <a class="dropdown-item disabled" href="#" data-value="F">Female</a>
-              <a class="dropdown-item disabled" href="#" data-value="all">All genders</a>
-            </div>
-          </span>
-        </div>
-      </div>
-    </section>
 
     <span id="about-us" class="anchor"></span>
     <section class="container pt-2 mb-5">
@@ -134,79 +60,3 @@
 
 
 {% endblock %}
-
-{% block custom_scripts %}
-  <!--DEMO CHARTS-->
-  <script>
-    var barChart = function (id, data1, data2) {
-      c3.generate({
-        data: {
-          columns: [
-            data1,
-            data2
-          ],
-          type: "bar",
-          groups: [
-            ["data1", "data2"]
-          ],
-          labels: true,
-          selection: {
-            enabled: false
-          }
-        },
-        bar: {
-          width: {
-            ratio: 0.7
-          }
-        },
-        interaction: {
-          enabled: false
-        },
-        legend: {
-          item: {
-            onclick: function () { },
-            onmouseover: function () { }
-          }
-        },
-        grid: {
-          y: {
-            lines: [{ value: 0 }],
-
-          },
-          focus: {
-            show: false
-          }
-        },
-        bindto: id,
-        color: {
-          pattern: ["rgb(68, 170, 67)", "rgb(53, 80, 139)"]
-        },
-        axis: {
-          x: {
-            type: "category",
-            categories: ["Shooting IQ", "Passing IQ", "Dribbling IQ", "Control IQ", "Skill IQ"]
-          },
-          y: {
-            min: 0,
-            max: 100,
-            padding: { top: 0, bottom: 0 }
-          },
-          rotated: true
-        },
-        transition: {
-          duration: 500
-        }
-      });
-    };
-
-    var chartData1 = ["Latest Showcase", 70, 75, 50, 30, 70];
-    var chartData2 = ["Prior Showcase", 65, 68, 45, 65, 65];
-    barChart("#chart-demo-1", chartData1, chartData2);
-
-    var chartData1 = ["Sal S", 70, 75, 50, 30, 71];
-    var chartData2 = ["All players: Any birth year, Male", 65, 68, 45, 65, 65];
-    barChart("#chart-demo-2", chartData1, chartData2);
-
-  </script>
-
-{% endblock custom_scripts %}
