updated to latest mockups

--- a/sporttech/templates/base.html
+++ b/sporttech/templates/base.html
@@ -87,18 +87,11 @@
                   <a class="nav-link" href="{% url 'login' %}?next={{request.path}}">login</a>
               </li>{% endif %}
               <li class="nav-item">
-                <a class="nav-link" href="/format">skill challenge format</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/player-stats">player example</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/club-stats">club example</a>
+                <a class="nav-link" href="/format">skill challenge</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/#about-us">about</a>
               </li>
-          
             </ul>
             <span class="navbar-text">
               {% now "M d, Y" %}
