--- a/home/templates/format.html
+++ b/home/templates/format.html
@@ -5,14 +5,12 @@
 {% block content %}
 	 <section class="container pt-2 mt-5 stretching-block">
       <div class="row align-items-center justify-content-center mb-2">
-        <div class="col-12 col-md-11 col-lg-9 mb-4">
+        <div class="col-12 col-md-11 col-lg-9 mb-4 mt-5">
 
-          <h3 class="mt-4">Process</h3>
           <div class="row align-items-center justify-content-center mb-2">
-            <div class="col-12 col-sm-5 col-lg-5">
-              <nav class="nav flex-column align-items-center justify-content-center text-center">
-                <a class="nav-link pb-0" href="#process">Process</a>
-              </nav>
+            <div class="col-12 col-sm-7 col-lg-7 text-center">
+              <a href="#" target="_blank" class="btn btn-primary btn-sm">Download App for Scorecard <i class="fa fa fa-download"></i>
+              </a>
             </div>
           </div>
 
@@ -53,34 +51,6 @@
                   {% endfor %}
                 </nav>
               </div>
-          </div>
-          <div class="mt-5">
-            <h3 class="mt-4">Process</h3>
-            <span id="process" class="anchor"></span>
-            <div class="row mt-3 mb-2 justify-content-center">
-              <span>
-                <a href="{% static "files/process_for_skill_challenge.pdf" %}" target="_blank" class="btn btn-primary btn-sm">
-                  Process
-                  <i class="fa fa-print"></i>
-                </a>
-                <a href="{% static "files/scorekeeper_sign_in.pdf" %}" target="_blank" class="btn btn-primary btn-sm">
-                  Scorekeeper Sign-In
-                  <i class="fa fa-print"></i>
-                </a>
-                <a href="{% static "files/player_sign_in.pdf" %}" target="_blank" class="btn btn-primary btn-sm">
-                  Player Sign-In
-                  <i class="fa fa-print"></i>
-                </a>
-                <a href="{% static "files/sporttech_iq_survey.pdf" %}" target="_blank" class="btn btn-primary btn-sm">
-                  Survey
-                  <i class="fa fa-print"></i>
-                </a>
-                <a href="{% static "files/skill_challenge_report.pdf" %}" target="_blank" class="btn btn-primary btn-sm">
-                  Report
-                  <i class="fa fa-print"></i>
-                </a>
-              </span>
-            </div>
           </div>
 
           <h3 class="mt-5 mb-3">Diagrams, Animations & Scorecards</h3>
