fixed page title error

--- a/home/templates/format.html
+++ b/home/templates/format.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block title %}Skill Challenge Format - Sportteech IQ{% endblock title %}  
+
 {% block content %}
 	 <section class="container pt-2 mt-5 stretching-block">
       <div class="row align-items-center justify-content-center mb-2">
